tests/paczka1/fuzzy1/73408160.err
Error in line 4: 5Rqh0j S244 53,6
Error in line 7: 5Rqh0j S988 32,6
Error in line 6: ssg S76 72,4
Error in line 11: rWLVl8 S988 60,4
Error in line 23: hVh S244 9,9
Error in line 34: f8fEz2ZQ S441 34,7
